--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   sqflite: ^2.4.2
   path: ^1.8.3
+  intl: ^0.18.1
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
