--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.8.3
   intl: ^0.18.1
+  flutter_bluetooth_printer: ^2.20.0
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
