--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.8.3
   intl: ^0.18.1
+  csv: ^5.0.0
+  path_provider: ^2.0.11
+  excel: ^2.1.0
+  share_plus: ^12.0.0
   flutter_bluetooth_printer: ^2.20.0
   cupertino_icons: ^1.0.8
 
