--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="hielo_pos"
+        android:label="Hielo Motastepe POS"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
