--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,11 +54,13 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+  change_app_package_name: ^1.1.0
 
 flutter_launcher_icons:
   android: true
   ios: true
   image_path: "assets/logo.png"
+  min_sdk_android: 21
 
 
 # For information on the generic Dart part of this file, see the
